tests/reference/asr-string_negative_start_index-643e9c0.stderr
semantic error: Substring `start` is negative
 --> tests/errors/string_negative_start_index.f90:5:19
  |
5 |     print*, "s:", s(-1:4)
  |                   ^^^^^^^ 
